Move repo organization to Duality Solutions

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ jobs:
         script:
           - go run . -debug
           - go build
-          - ./webbridge -dev
+          - ./web-bridge -debug
