Test for race conditions in Travis CI debug run - change dynamicd and dynamic-cli file permission to allow execute

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ jobs:
       - stage: build
         name: 'Ubuntu 18 Build Test'
         script:
-          - go run . -debug
+          - go run -race . -debug
           - go build
+          - chmod +x dynamic/dynamicd
+          - chmod +x dynamic/dynamic-cli
           - ./web-bridge -debug
