Improve Travis CI build command

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ jobs:
         name: 'Ubuntu 18 Build Test'
         script:
           - go run -race . -debug -dev
-          - go build
+          - go build -i -v -ldflags="-X 'main.GitHash=$(git describe --always --long --dirty)' -X 'main.Version=$(date +'%y.%m.%d')'" github.com/duality-solutions/web-bridge
           - ./web-bridge -debug -dev
