--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ jobs:
       - stage: build
         name: 'Ubuntu 18 Build Test'
         script:
-          - go run -race . -debug -dev
+          - go run -race . -debug -test
           - go build -i -v -ldflags="-X 'main.GitHash=$(git describe --always --long --dirty)' -X 'main.Version=$(date +'%y.%m.%d')'" github.com/duality-solutions/web-bridge
-          - ./web-bridge -debug -dev
+          - ./web-bridge -debug -test
