Add debug log to write to file and console

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 # setting configuration file
 .webbridge.settings.json
 
-# Dynamic binaries
+# Binaries
 dynamic/*
 web-bridge
+
+# Log files
+debug.log
