--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: go
 go:
   - "1.14.x"
 install: 
-  - sudo apt-get install -qq pkg-config fuse build-essential
+  - sudo apt-get install -qq pkg-config fuse build-essential protobuf-compiler
 cache:
   apt: true
 jobs:
@@ -12,6 +12,12 @@ jobs:
       - stage: build
         name: 'Ubuntu 18 Build Test'
         script:
-          - go run -race . -debug -test
+          - go run -race . -debug -test # test run with race
+          - go get -u -v github.com/golang/protobuf/proto
+          - go get -u -v github.com/golang/protobuf/protoc-gen-go
+          - protoc --go_out=. bridge/*.proto
+          - ./tests/http-proxy/build.sh
+          - ./tests/tunnel/data-channel-create/build.sh
+          - ./tests/tunnel/data-channel-wait/build.sh
           - go build -i -v -ldflags="-X 'main.GitHash=$(git describe --always --long --dirty)' -X 'main.Version=$(date +'%y.%m.%d')'" github.com/duality-solutions/web-bridge
           - ./web-bridge -debug -test
