--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
           - go run -race . -debug -test # test run with race
           - go get -u -v github.com/golang/protobuf/proto
           - go get -u -v github.com/golang/protobuf/protoc-gen-go
-          - protoc --go_out=. bridge/*.proto
+          - protoc --go_out=. goproxy/*.proto
           - ./tests/http-proxy/build.sh
           - ./tests/tunnel/data-channel-create/build.sh
           - ./tests/tunnel/data-channel-wait/build.sh
