Add Yarn to web package file

--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yarn": "^1.22.5"
   },
   "scripts": {
     "start": "react-scripts start",
