--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.3.0",
     "typescript": "~3.7.2",
     "yarn": "^1.22.5"
   },
