--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.0",
+    "terminal-in-react": "^4.3.1",
     "typescript": "~3.7.2",
     "yarn": "^1.22.5"
   },
