--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.20.0",
     "node-fetch": "^2.6.1",
     "node-forge": "0.10.0",
+    "qrcode-generator": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
