--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/sjcl": "^1.0.29",
     "axios": "^0.20.0",
     "node-fetch": "^2.6.1",
     "node-forge": "0.10.0",
@@ -19,6 +20,7 @@
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.0",
+    "sjcl": "^1.0.8",
     "terminal-in-react": "^4.3.1",
     "typescript": "~3.7.2",
     "yarn": "^1.22.5"
