--- a/web/package.json
+++ b/web/package.json
@@ -12,14 +12,17 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.8",
     "@types/sjcl": "^1.0.29",
     "axios": "^0.20.0",
+    "connected-react-router": "^6.8.0",
     "node-fetch": "^2.6.1",
     "node-forge": "0.10.0",
     "qrcode-generator": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-injectors": "^1.3.0",
