--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,9 @@
     "qrcode-generator": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.0",
     "sjcl": "^1.0.8",
