--- a/web/package.json
+++ b/web/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/sjcl": "^1.0.29",
     "axios": "^0.20.0",
+    "file-saver": "^2.0.2",
     "node-fetch": "^2.6.1",
     "node-forge": "0.10.0",
     "qrcode-generator": "^1.4.4",
